// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzAction > Snapshots > should match snapshot - default state 1`] = `
"<button data-v-41dbd958="" aria-disabled="false" aria-selected="false" type="button" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 px-12 py-6 flex-row gap-8 text-core-black hover:bg-background-alice-blue hover:!text-blue-500 focus:!border-blue-200 focus:!outline-none focus:text-core-black">
  <!--v-if-->
  <div data-v-41dbd958="" class="flex flex-1 flex-col gap-4 overflow-hidden"><span data-v-41dbd958="" class="text-base text-left" title="Test Action">Test Action</span>
    <!--v-if-->
  </div>
  <!--v-if-->
</button>"
`;

exports[`FzAction > Snapshots > should match snapshot - disabled state 1`] = `
"<button data-v-41dbd958="" aria-disabled="true" tabindex="-1" aria-selected="false" type="button" disabled="" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 px-12 py-6 flex-row gap-8 text-grey-200 cursor-not-allowed focus:!outline-none">
  <!--v-if-->
  <div data-v-41dbd958="" class="flex flex-1 flex-col gap-4 overflow-hidden"><span data-v-41dbd958="" class="text-base text-left" title="Disabled Action">Disabled Action</span>
    <!--v-if-->
  </div>
  <!--v-if-->
</button>"
`;

exports[`FzAction > Snapshots > should match snapshot - link type 1`] = `
"<router-link data-v-41dbd958="" to="/test" replace="false" class="border-1 border-transparent inline-block text-base leading-base focus:outline-none focus:border-solid focus:no-underline text-blue-500 hover:text-blue-600 hover:underline focus:text-blue-600 focus:border-blue-600 group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 px-12 py-6 flex-row gap-8 text-core-black hover:bg-background-alice-blue hover:!text-blue-500 focus:!border-blue-200 focus:!outline-none focus:text-core-black" aria-disabled="false" aria-selected="false">
  <!--v-if-->
  <div data-v-41dbd958="" class="flex flex-1 flex-col gap-4 overflow-hidden"><span data-v-41dbd958="" class="text-base text-left" title="Link Action">Link Action</span>
    <!--v-if-->
  </div>
  <!--v-if-->
</router-link>"
`;

exports[`FzAction > Snapshots > should match snapshot - onlyIcon variant 1`] = `
"<button data-v-41dbd958="" aria-disabled="false" aria-selected="false" type="button" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 p-6 justify-center text-core-black hover:bg-background-alice-blue hover:!text-blue-500 focus:!border-blue-200 focus:!outline-none focus:text-core-black" aria-label="Bell">
  <div data-v-41dbd958="" class="flex items-center justify-center w-[20px] h-[20px] w-20 h-20" aria-hidden="true"><svg class="svg-inline--fa fa-bell h-[16px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="bell" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
      <path class="" fill="currentColor" d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 25.4c0 45.4-15.5 89.5-43.8 124.9L5.3 377c-5.8 7.2-6.9 17.1-2.9 25.4S14.8 416 24 416l400 0c9.2 0 17.6-5.3 21.6-13.6s2.9-18.2-2.9-25.4l-14.9-18.6C399.5 322.9 384 278.8 384 233.4l0-25.4c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm0 96c61.9 0 112 50.1 112 112l0 25.4c0 47.9 13.9 94.6 39.7 134.6L72.3 368C98.1 328 112 281.3 112 233.4l0-25.4c0-61.9 50.1-112 112-112zm64 352l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z"></path>
    </svg></div>
</button>"
`;

exports[`FzAction > Snapshots > should match snapshot - readonly state 1`] = `
"<button data-v-41dbd958="" aria-disabled="true" tabindex="-1" aria-selected="false" type="button" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 px-12 py-6 flex-row gap-8 text-grey-200 cursor-not-allowed focus:!outline-none">
  <!--v-if-->
  <div data-v-41dbd958="" class="flex flex-1 flex-col gap-4 overflow-hidden"><span data-v-41dbd958="" class="text-base text-left" title="Readonly Action">Readonly Action</span>
    <!--v-if-->
  </div>
  <!--v-if-->
</button>"
`;

exports[`FzAction > Snapshots > should match snapshot - role option 1`] = `
"<button data-v-41dbd958="" aria-disabled="false" tabindex="-1" role="option" aria-selected="true" type="button" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 px-12 py-6 flex-row gap-8 text-core-black hover:bg-background-alice-blue hover:!text-blue-500 focus:!border-blue-200 focus:!outline-none focus:text-core-black">
  <!--v-if-->
  <div data-v-41dbd958="" class="flex flex-1 flex-col gap-4 overflow-hidden"><span data-v-41dbd958="" class="text-base text-left" title="Option">Option</span>
    <!--v-if-->
  </div>
  <!--v-if-->
</button>"
`;

exports[`FzAction > Snapshots > should match snapshot - textCenter variant 1`] = `
"<button data-v-41dbd958="" aria-disabled="false" aria-selected="false" type="button" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 px-12 py-6 flex-col items-center gap-1 text-core-black hover:bg-background-alice-blue hover:!text-blue-500 focus:!border-blue-200 focus:!outline-none focus:text-core-black">
  <div data-v-41dbd958="" class="flex flex-col items-center gap-4 overflow-hidden">
    <div data-v-41dbd958="" class="flex items-center gap-8">
      <!--v-if--><span data-v-41dbd958="" class="text-base" title="Text Center">Text Center</span>
      <!--v-if-->
    </div><span data-v-41dbd958="" class="text-sm text-grey-500 group-hover:text-blue-500 transition-colors duration-200" title="Sub Label">Sub Label</span>
  </div>
</button>"
`;

exports[`FzAction > Snapshots > should match snapshot - textLeft variant 1`] = `
"<button data-v-41dbd958="" aria-disabled="false" aria-selected="false" type="button" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 px-12 py-6 flex-row gap-8 text-core-black hover:bg-background-alice-blue hover:!text-blue-500 focus:!border-blue-200 focus:!outline-none focus:text-core-black">
  <!--v-if-->
  <div data-v-41dbd958="" class="flex flex-1 flex-col gap-4 overflow-hidden"><span data-v-41dbd958="" class="text-base text-left" title="Text Left">Text Left</span><span data-v-41dbd958="" class="text-sm text-left text-grey-500 group-hover:text-blue-500 transition-colors duration-200" title="Sub Label">Sub Label</span></div>
  <!--v-if-->
</button>"
`;

exports[`FzAction > Snapshots > should match snapshot - with icons 1`] = `
"<button data-v-41dbd958="" aria-disabled="false" aria-selected="false" type="button" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 px-12 py-6 flex-row gap-8 text-core-black hover:bg-background-alice-blue hover:!text-blue-500 focus:!border-blue-200 focus:!outline-none focus:text-core-black">
  <div data-v-41dbd958="" class="flex items-center justify-center w-[20px] h-[20px] w-20 h-20" aria-hidden="true"><svg class="svg-inline--fa fa-bell h-[16px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="bell" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
      <path class="" fill="currentColor" d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 25.4c0 45.4-15.5 89.5-43.8 124.9L5.3 377c-5.8 7.2-6.9 17.1-2.9 25.4S14.8 416 24 416l400 0c9.2 0 17.6-5.3 21.6-13.6s2.9-18.2-2.9-25.4l-14.9-18.6C399.5 322.9 384 278.8 384 233.4l0-25.4c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm0 96c61.9 0 112 50.1 112 112l0 25.4c0 47.9 13.9 94.6 39.7 134.6L72.3 368C98.1 328 112 281.3 112 233.4l0-25.4c0-61.9 50.1-112 112-112zm64 352l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z"></path>
    </svg></div>
  <div data-v-41dbd958="" class="flex flex-1 flex-col gap-4 overflow-hidden"><span data-v-41dbd958="" class="text-base text-left" title="With Icons">With Icons</span>
    <!--v-if-->
  </div>
  <div data-v-41dbd958="" class="flex items-center justify-center w-[20px] h-[20px] w-20 h-20" aria-hidden="true"><svg class="svg-inline--fa fa-chevron-right h-[16px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="chevron-right" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
      <path class="" fill="currentColor" d="M305 239c9.4 9.4 9.4 24.6 0 33.9L113 465c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l175-175L79 81c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L305 239z"></path>
    </svg></div>
</button>"
`;
